Refactor ancient "renderer class" treatments.  Fixes #1082 as a side effect